--- a/samplecode/numpy/numpy-intro.ipynb
+++ b/samplecode/numpy/numpy-intro.ipynb
@@ -11,12 +11,12 @@
     "* [Chapter 2 of VanderPlas](https://jakevdp.github.io/PythonDataScienceHandbook/02.00-introduction-to-numpy.html)\n",
     "* [The numpy documentation](https://numpy.org/doc/stable/)\n",
     "\n",
-    "(This notebook is currently empty, but planned to be created in Lecture 25.)"
+    "(We'll add more to this notebook in Lecture 26.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "'1.17.4'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,10 +46,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# all zeros, specified shape\n",
+    "np.zeros( (2,3) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# all ones, specified shape\n",
+    "np.ones( (8,) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.7, 1.7, 1.7],\n",
+       "       [1.7, 1.7, 1.7],\n",
+       "       [1.7, 1.7, 1.7]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# array with every entry equal to a given constant\n",
+    "np.full( (3,3), 1.7 )  # shape, value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.ones( (4,4) )\n",
+    "A.ndim  # the dimension of A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 4)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape # the shape of A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.size # the number of elements in A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.dtype # the data type (np.ones gives float64 by default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = np.full( (2,3), 6 )  # Python int given, converted to int64\n",
+    "B.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build array from an iterable\n",
+    "C = np.array( [[5,6,7,8],[9,10,11,12]] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "int64\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(C.ndim)\n",
+    "print(C.dtype)\n",
+    "print(C.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.71205335, 0.92678077, 0.63782388, 0.0443609 , 0.22654121,\n",
+       "        0.37925262, 0.95746515, 0.47439356],\n",
+       "       [0.43646419, 0.60599148, 0.47297278, 0.30563332, 0.17018216,\n",
+       "        0.9153842 , 0.28722953, 0.20839653],\n",
+       "       [0.42967794, 0.33536607, 0.66756755, 0.86407176, 0.76961467,\n",
+       "        0.99602041, 0.97321266, 0.29357561],\n",
+       "       [0.61409002, 0.0338399 , 0.12149724, 0.34554109, 0.47548652,\n",
+       "        0.77123556, 0.90267432, 0.45335279],\n",
+       "       [0.57007505, 0.8445216 , 0.08838114, 0.94622915, 0.90687248,\n",
+       "        0.28759011, 0.94766349, 0.25547712]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.random.random(shape) gives array of uniformly distributed\n",
+    "# random floats 0<=x<1\n",
+    "np.random.random((5,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 1]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(5,dtype=\"int\")  # identity matrix, specified dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True],\n",
+       "       [ True,  True]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((2,2),dtype=\"bool\")  # numpy supports boolean arrays\n",
+    "# coerces 0 to False and 1 to True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arithmetic progressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3. , 3.7, 4.4, 5.1, 5.8, 6.5, 7.2, 7.9])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(3,8,0.7)  # start, stop, step.  Will not include stop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.        , 2.16666667, 2.33333333, 2.5       , 2.66666667,\n",
+       "       2.83333333, 3.        , 3.16666667, 3.33333333, 3.5       ,\n",
+       "       3.66666667, 3.83333333, 4.        , 4.16666667, 4.33333333,\n",
+       "       4.5       , 4.66666667, 4.83333333, 5.        , 5.16666667,\n",
+       "       5.33333333, 5.5       , 5.66666667, 5.83333333, 6.        ,\n",
+       "       6.16666667, 6.33333333, 6.5       , 6.66666667, 6.83333333,\n",
+       "       7.        ])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(2,7,31)  # first, last, num_steps"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,10 +382,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A = np.array(range(24)).reshape((4,6))   # 0..23 in a vector, but then convert to 4x6 matrix\n",
+    "v = np.arange(1,5,1.2) # vector (array with ndim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15, 16, 17],\n",
+       "       [18, 19, 20, 21, 22, 23]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1. , 2.2, 3.4, 4.6])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[1] # element at index 1 (zero-based)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.4000000000000004"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[-2] # second to last element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[2,0]  # row 2, column 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  8, 14, 20])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[:,2]  # column 2 of A  (remember, 0-based numbering!)\n",
+    "# I think of this as A[anything,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7,  8,  9, 10, 11, 12])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[1,:]  # row 1 of A\n",
+    "# I think of this as A[1,anything]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7,  8,  9, 10, 11, 12])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[1] # another way to specify row 1 of A\n",
+    "# missing indices are treated as \":\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2],\n",
+       "       [13, 14]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[::2,1:3]  # all rows of even index, columns 1 and 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,10 +586,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10],\n",
+       "       [11, 12, 13, 14, 15]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's make an array to work with\n",
+    "A = np.array(range(1,16)).reshape((3,5))\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.5       , 0.33333333, 0.25      , 0.2       ],\n",
+       "       [0.16666667, 0.14285714, 0.125     , 0.11111111, 0.1       ],\n",
+       "       [0.09090909, 0.08333333, 0.07692308, 0.07142857, 0.06666667]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 / A  # reciprocal of each entry in the matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1,   4,   9,  16,  25],\n",
+       "       [ 36,  49,  64,  81, 100],\n",
+       "       [121, 144, 169, 196, 225]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A**2 # square of each entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.84147098,  0.90929743,  0.14112001, -0.7568025 , -0.95892427],\n",
+       "       [-0.2794155 ,  0.6569866 ,  0.98935825,  0.41211849, -0.54402111],\n",
+       "       [-0.99999021, -0.53657292,  0.42016704,  0.99060736,  0.65028784]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sin(A) # apply sin() to each entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   1,    8,   27,   64,  125,  216,  343,  512,  729, 1000, 1331])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# first 11 cubes\n",
+    "np.arange(1,12)**3  # make vector of 1..11 and then cube each entry"
+   ]
   },
   {
    "cell_type": "markdown",
